--- a/MyPortfolio/index version 3 LAST UPDATE IMAGE like.html
+++ b/MyPortfolio/index version 3 LAST UPDATE IMAGE like.html
@@ -14,9 +14,6 @@
   <header class="site-header">
     <div class="nav-container">
       <div class="brand">
-        <!-- Profile image remains first -->
-        <!--img src="images/Victoria.jpg" alt="Victoria Manjarrez" class="profile-pic">
-        <!-- Your name will now appear below the image -->
         <a href="index.html">Victoria Manjarrez</a>
       </div>
       <nav class="main-nav">
@@ -26,30 +23,24 @@
           <li><a href="publications.html">Publications</a></li>
           <li><a href="CV.html">CV</a></li>
           <li><a href="CV.html">About me</a></li>
+          
         </ul>
       </nav>
     </div>
   </header>
-  
+
 
   
-<!-- HERO SECTION WITH VIDEO BACKGROUND, OVERLAY, IMAGE, AND TEXT -->
+<!-- HERO SECTION WITH IMAGE AND TEXT -->
 <section class="hero-section">
-  <video class="hero-video" autoplay muted loop playsinline>
-    <source src="images/VIDEO2.mp4" type="video/mp4">
-    Your browser does not support the HTML5 video.
-  </video>
-  <!-- Semi-transparent overlay on top of the video -->
-  <div class="hero-overlay"></div>
-  <!-- Container for foreground content -->
   <div class="hero-container">
-    <!-- Circular Picture: now on top -->
+    <!-- Left Column: Circular Picture -->
     <div class="hero-image">
       <img src="images/Victoria.jpg" alt="Victoria Manjarrez">
     </div>
-    <!-- Introductory Text: now below the image -->
+    <!-- Right Column: Introductory Text -->
     <div class="hero-text">
-      <h1>Hi, I'm Victoria Manjarrez </h1>
+      <h1>Hi, I'm Victoria Manjarrez</h1>
       <h2>I'm a Mechatronics Engineer</h2>
       <a href="#about" class="hero-button">Learn More About Me</a>
     </div>
@@ -57,8 +48,10 @@
 </section>
 
 
+  <
+
   <!-- ABOUT ME SECTION WITH PHOTO NEXT TO TEXT -->
-  <!-- (Additional content goes here) -->
+  
 
   <!-- BLACK FOOTER -->
   <footer class="site-footer">
@@ -71,7 +64,8 @@
       new Typed(".typed-text", {
         strings: [
           "Mechatronics Engineer",
-          "Researcher"
+          "Researcher",
+          
         ],
         typeSpeed: 60,
         backSpeed: 40,
