--- a/MyPortfolio/publications.html
+++ b/MyPortfolio/publications.html
@@ -33,7 +33,7 @@
     <div class="pub-item">
       <!-- Thumbnail on the left -->
       <img 
-        src="images/pub1-thumb.jpg" 
+        src="images/Publication1.jpg" 
         alt="" 
         class="pub-img" 
       />
@@ -60,7 +60,7 @@
     <div class="pub-item">
       <!-- Thumbnail on the left -->
       <img 
-        src="images/pub1-thumb.jpg" 
+        src="images/Publication2.jpg" 
         alt="" 
         class="pub-img" 
       />
@@ -85,7 +85,7 @@
     <div class="pub-item">
       <!-- Thumbnail on the left -->
       <img 
-        src="images/pub1-thumb.jpg" 
+        src="images/Publication3.jpg" 
         alt="" 
         class="pub-img" 
       />
@@ -107,11 +107,11 @@
     </div>
 
     
-    <!-- PUBLICATION ITEM 5 -->
+    <!-- PUBLICATION ITEM 4 -->
     <div class="pub-item">
       <!-- Thumbnail on the left -->
       <img 
-        src="images/pub1-thumb.jpg" 
+        src="images/Publication4.jpeg" 
         alt="" 
         class="pub-img" 
       />
@@ -134,11 +134,11 @@
       </div>
     </div>
 
-    <!-- PUBLICATION ITEM 6 -->
+    <!-- PUBLICATION ITEM 5 -->
     <div class="pub-item">
       <!-- Thumbnail on the left -->
       <img 
-        src="images/pub2-thumb.jpg" 
+        src="images/Publication5.jpg" 
         alt="" 
         class="pub-img" 
       />
